--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ header {
 }
 
 header p {
-  font-size: 40px;
+  font-size: 50px;
   font-weight: bold;
   color: #E7344E;
   font-family: "Bagel Fat One", system-ui;
@@ -22,6 +22,8 @@ header p {
 
 .search-container input {
   margin-right: 5px;
+  width: 180px;
+  height: 30px;
 }
 
 .search-container .search-btn {
@@ -42,13 +44,15 @@ section {
   border: 3px solid palevioletred;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .movie-box {
   border: 3px solid slateblue;
-  background-color: rgb(254, 211, 217);
-  width: 270px;
-  height: 460px;
+  margin: 20px 0;
+  /* background-color: rgb(254, 211, 217); */
+  width: 330px;
+  height: 670px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,28 +66,32 @@ section {
 
 .movie-box img {
   border-radius: 5px;
-  width: 210px;
-  height: 250px;
+  width: 80%;
 }
 
 .movie-info-box {
   border: 3px solid pink;
-  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: 15px;
   margin-top: 5px;
   width: 100%;
-  /* height: 100%; */
+  height: 50%;
 }
 
 .movie-info-box .title-score {
   height: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .movie-info-box .title-score .title {
-  font-size: 18px;
+  width: 90%;
+  font-size: 22px;
   font-weight: bold;
+  padding-top: 10px;
 }
 
 .up-btn {
