--- a/main.css
+++ b/main.css
@@ -1,17 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
 
+* {
+  background-color: black;
+}
+
 header {
-  border: 3px solid greenyellow;
+  /* border: 3px solid greenyellow; */
   height: 20vh;
 }
 
 header p {
-  font-size: 50px;
+  font-size: 60px;
   font-weight: bold;
   color: #E7344E;
   font-family: "Bagel Fat One", system-ui;
   margin: 10px;
   text-align: center;
+}
+
+header p:hover {
+  cursor: pointer;
 }
 
 .search-container {
@@ -22,8 +30,12 @@ header p {
 
 .search-container input {
   margin-right: 5px;
+  border: 1px solid white;
+  color: white;
+  border-radius: 3px;
   width: 180px;
   height: 30px;
+  font-size: 15px;
 }
 
 .search-container .search-btn {
@@ -36,21 +48,26 @@ header p {
 
 section {
   position: relative;
-  border: 3px solid blue;
+  /* border: 3px solid blue; */
   padding: 10px 30px;
 }
 
 .movie-container {
-  border: 3px solid palevioletred;
+  /* border: 3px solid palevioletred; */
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
+.movie-box, .movie-box img, .movie-info-box, .title-score, .movie-info-box p {
+  background-color: rgb(234, 230, 230);
+}
+
 .movie-box {
-  border: 3px solid slateblue;
+  /* border: 3px solid slateblue; */
+  border-radius: 5px;
   margin: 20px 0;
-  /* background-color: rgb(254, 211, 217); */
+  padding: 5px;
   width: 330px;
   height: 670px;
   display: flex;
@@ -61,16 +78,17 @@ section {
 .movie-box:hover {
   cursor: pointer;
   transform: scale(1.1);
-  transition-duration: 1s;
+  transition-duration: 0.5s;
 }
 
 .movie-box img {
   border-radius: 5px;
   width: 80%;
+  z-index: 100;
 }
 
 .movie-info-box {
-  border: 3px solid pink;
+  /* border: 3px solid pink; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -96,8 +114,8 @@ section {
 
 .up-btn {
   position: absolute;
-  float: right bottom;
-  z-index: 100;
+  float: bottom;
+  margin-left: 90vw;
   background-color: #E7344E;
   font-size: 30px;
   color: white;
@@ -113,11 +131,13 @@ section {
 }
 
 footer {
-  border: 3px solid lightseagreen;
+  /* border: 3px solid lightseagreen; */
+  margin-top: 40px;
   height: 15vh;
   line-height: 5px;
   text-align: center;
   align-content: center;
+  color: white
 }
 
 footer p {
