--- a/main.css
+++ b/main.css
@@ -1,18 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap");
 
 * {
   background-color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
   /* border: 3px solid greenyellow; */
-  height: 20vh;
+  height: 25vh;
 }
 
 header p {
   font-size: 60px;
   font-weight: bold;
-  color: #E7344E;
+  color: #e7344e;
   font-family: "Bagel Fat One", system-ui;
   margin: 10px;
   text-align: center;
@@ -40,7 +41,7 @@ header p:hover {
 
 .search-container .search-btn {
   border-radius: 5px;
-  background-color: #E7344E;
+  background-color: #e7344e;
   border: 0;
   color: white;
   cursor: pointer;
@@ -59,7 +60,11 @@ section {
   flex-wrap: wrap;
 }
 
-.movie-box, .movie-box img, .movie-info-box, .title-score, .movie-info-box p {
+.movie-box,
+.movie-box img,
+.movie-info-box,
+.title-score,
+.movie-info-box p {
   background-color: rgb(234, 230, 230);
 }
 
@@ -92,7 +97,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  font-size: 15px;
+  font-size: 16px;
   margin-top: 5px;
   width: 100%;
   height: 50%;
@@ -113,10 +118,11 @@ section {
 }
 
 .up-btn {
-  position: absolute;
-  float: bottom;
-  margin-left: 90vw;
-  background-color: #E7344E;
+  position: fixed;
+  /* z-index: 100; */
+  top: 41vw;
+  right: 5px;
+  background-color: #e7344e;
   font-size: 30px;
   color: white;
   text-align: center;
@@ -137,7 +143,7 @@ footer {
   line-height: 5px;
   text-align: center;
   align-content: center;
-  color: white
+  color: white;
 }
 
 footer p {
