--- a/style/style.css
+++ b/style/style.css
@@ -13,10 +13,6 @@ header {
 
 .modal-box {
   display: none;
-}
-
-.modal {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -32,12 +28,12 @@ header {
   font-size: 20px;
 }
 
-.modal p {
+.modal-box p {
   font-family: "IBM Plex Sans KR", sans-serif;
   font-style: normal;
 }
 
-.modal #check-btn {
+.modal-box .check-btn {
   border-radius: 5px;
   background-color: #e7344e;
   border: 0;
@@ -63,13 +59,13 @@ header #main-page:hover {
   cursor: pointer;
 }
 
-.search-container {
+form {
   float: right;
   display: flex;
   margin-right: 20px;
 }
 
-.search-container input {
+form input {
   margin-right: 5px;
   border: 1px solid white;
   color: white;
@@ -81,7 +77,7 @@ header #main-page:hover {
   font-style: normal;
 }
 
-.search-container .search-btn {
+form .search-btn {
   border-radius: 5px;
   background-color: #e7344e;
   border: 0;
@@ -115,7 +111,7 @@ ul, li {
   flex-wrap: wrap;
 }
 
-.modal p,
+.modal-box p,
 .movie-box,
 .movie-box img,
 .movie-info-box,
