--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@ header {
 }
 
 .modal-box {
+  z-index: 200;
   display: none;
   flex-direction: column;
   align-items: center;
@@ -24,11 +25,12 @@ header {
   height: 20vh;
   padding: 10px;
   border-radius: 10px;
+  border: 2px solid black;
   background-color: rgb(234, 230, 230);
   font-size: 20px;
 }
 
-.modal-box p {
+.modal-box .message {
   font-family: "IBM Plex Sans KR", sans-serif;
   font-style: normal;
 }
@@ -171,7 +173,6 @@ ul, li {
 
 .up-btn {
   position: fixed;
-  /* z-index: 100; */
   top: 90%;
   right: 5px;
   background-color: #e7344e;
